style: make sidebarbutton smaller and fixed size

--- a/frontend/src/stylesheets/components/sidebar.sass
+++ b/frontend/src/stylesheets/components/sidebar.sass
@@ -19,15 +19,19 @@
     transition: all 350ms ease-in-out
     position: absolute
     left: 100%
-    width: 5vw
-    height: 5vw
-    margin-left: -2.5vw
+    width: 44px
+    height: 44px
+    margin-left: -22px
     top: 50%
     background-color: white
     border: 1px $primary-color solid
     &:hover
       opacity: 1
       background-color: $primary-color
+    img
+      width: 60%
+      padding-top: 55%
+      transform: translateY(-25%)
 
   .sidebar-background
     position: absolute
